--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,14 +13,17 @@
     <br/>
     <button id="clear">清空</button>
     <button id="submit">提交</button>
-    <script src="{{ url_for('static', filename='js/draw.js') }}"></script>
 </div>
 <br/>
+{#
 <div>
-    <form action="/recognize" method="post" enctype="multipart/form-data">
+    <form action="/api/recognize" method="post" enctype="multipart/form-data">
         <input type="file" id="file" name="file" />
         <input type="submit" value="上传文件" />
     </form>
 </div>
+#}
 </body>
+<script src="{{ url_for('static', filename='js/draw.js') }}"></script>
+<script src="{{ url_for('static', filename='js/submit.js') }}"></script>
 </html>
