--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,20 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>手写数字识别</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="https://cdn.staticfile.net/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.net/popper.js/2.9.3/umd/popper.min.js"></script>
+    <script src="https://cdn.staticfile.net/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1>手写数字识别</h1>
-<hr>
-<div>
-    <canvas id="draw"></canvas>
+<div class="container pt-4">
+    <div class="row">
+        <h1>MNIST 手写数字识别</h1>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                <canvas id="draw"></canvas>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="eraser">
+                <label class="form-check-label" for="eraser">橡皮擦</label>
+            </div>
+            <br/>
+            <div>
+                <button id="clear" class="btn btn-secondary">清空</button>
+                <button id="submit" class="btn btn-primary">提交</button>
+            </div>
+        </div>
+    </div>
     <br/>
-    <button id="clear">清空</button>
-    <button id="submit">提交</button>
-</div>
-<br/>
-{#
+    {#
 <div>
     <form action="/api/recognize" method="post" enctype="multipart/form-data">
         <input type="file" id="file" name="file" />
@@ -23,6 +41,7 @@
     </form>
 </div>
 #}
+</div>
 </body>
 <script src="{{ url_for('static', filename='js/draw.js') }}"></script>
 <script src="{{ url_for('static', filename='js/submit.js') }}"></script>
