Add color selector

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,8 +22,16 @@
         </div>
         <div class="col-md-6">
             <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="eraser">
                 <label class="form-check-label" for="eraser">橡皮擦</label>
+                <input class="form-check-input" type="checkbox" id="eraser">
+            </div>
+            <br/>
+            <div>
+                <label for="brushColor">画笔颜色</label>
+                <input type="color" id="brush-color" value="#000000">
+                <br/>
+                <label for="backgroundColor">背景颜色</label>
+                <input type="color" id="background-color" value="#ffffff">
             </div>
             <br/>
             <div>
