Arrange ts code structure

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -62,6 +62,8 @@
 #}
 </div>
 </body>
+<script src="{{ url_for('static', filename='js/canvas.js') }}"></script>
 <script src="{{ url_for('static', filename='js/draw.js') }}"></script>
+<script src="{{ url_for('static', filename='js/setting.js') }}"></script>
 <script src="{{ url_for('static', filename='js/submit.js') }}"></script>
 </html>
