--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,6 +47,14 @@
                         <button id="clear" class="btn btn-secondary">清空</button>
                         <button id="submit" class="btn btn-primary">提交</button>
                     </div>
+                    <br/>
+                    <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                        <div class="toast-header">
+                            <div id="toast-title" style="font-weight: bold"></div>
+                            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                        </div>
+                        <div class="toast-body" id="toast-body"></div>
+                    </div>
                 </div>
             </div>
         </div>
