--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,7 +45,7 @@
                     <br/>
                     <div>
                         <button id="clear" class="btn btn-secondary">清空</button>
-                        <button id="submit" class="btn btn-primary">提交</button>
+                        <button id="submit" class="btn btn-primary">识别</button>
                     </div>
                     <br/>
                     <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
