--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>手写数字识别</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
-    <link rel="stylesheet" href="https://cdn.staticfile.net/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
-    <script src="https://cdn.staticfile.net/popper.js/2.9.3/umd/popper.min.js"></script>
-    <script src="https://cdn.staticfile.net/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 </head>
 <body>
 <div class="container pt-4">
