--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -76,7 +76,7 @@
     <br/>
     {#
 <div>
-    <form action="/api/recognize" method="post" enctype="multipart/form-data">
+    <form action="/api/retrieve" method="post" enctype="multipart/form-data">
         <input type="file" id="file" name="file" />
         <input type="submit" value="上传文件" />
     </form>
