--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -5,9 +5,10 @@
 }
 
 #result {
-    width: 100%
+    width: 100%;
+    min-height: 100px;
+    border: #000 1px solid;
 }
 
 #result img {
-    border: #000 1px solid;
 }
