--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>手绘图像检索</title>
+    <title>手绘草图检索</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
@@ -11,7 +11,7 @@
 <div class="container pt-4">
     <div class="row">
         <div class="col-md-3">
-            <h1>手绘图像检索</h1>
+            <h1>手绘草图检索</h1>
         </div>
         <div class="col-md-9">
 
